Runner C++ template: unbreak build due to KDEFrameworkCompilerSettings use

--- a/templates/runner6/CMakeLists.txt
+++ b/templates/runner6/CMakeLists.txt
@@ -13,7 +13,7 @@ find_package(KF6 ${KF_MIN_VERSION} REQUIRED COMPONENTS Runner I18n)
 include(KDEInstallDirs)
 include(KDEClangFormat)
 include(KDECMakeSettings)
-include(KDEFrameworkCompilerSettings NO_POLICY_SCOPE)
+include(KDECompilerSettings NO_POLICY_SCOPE)
 include(FeatureSummary)
 
 add_subdirectory(src)
