--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,5 +5,6 @@ include:
   - project: sysadmin/ci-utilities
     file:
       - /gitlab-templates/linux-qt6.yml
+      - /gitlab-templates/linux-qt6-next.yml
       - /gitlab-templates/reuse-lint.yml
       - /gitlab-templates/freebsd-qt6.yml
