Add support for XDG Activation in DBusRunner
For lack of platform_data in Run, this adds a SetActivationToken method
that is called just before Run, similar to how it's done in notifications.

--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -10,6 +10,7 @@ Dependencies:
     'frameworks/threadweaver': '@same'
     'frameworks/ki18n': '@same'
     'frameworks/kitemmodels': '@same'
+    'frameworks/kwindowsystem': '@same'
 
 Options:
  test-before-installing: True
