Emit historyChanged() when history changed
Supports https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5854

Right now `history` is a property, but it's not `NOTIFY`able, limiting how
it can be used from QML. Emit some signals when it changes.

CCBUG: 507588

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -59,6 +59,7 @@ target_link_libraries(KF6Runner
     PUBLIC
         Qt6::Core
         KF6::CoreAddons # KPluginFactory
+        KF6::ConfigCore
     PRIVATE
         Qt6::DBus
         Qt6::Gui
