Enable LSAN in CI
To check for leaks

--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -16,3 +16,4 @@ Options:
  test-before-installing: True
  require-passing-tests-on: ['Linux', 'FreeBSD']
  cppcheck-ignore-files: ['templates/']
+ enable-lsan: True
